--- a/defconfig/rockchip_defconfig
+++ b/defconfig/rockchip_defconfig
@@ -80,6 +80,8 @@ CONFIG_PARTITION_ADVANCED=y
 CONFIG_BSD_DISKLABEL=y
 CONFIG_CMDLINE_PARTITION=y
 CONFIG_BINFMT_MISC=m
+CONFIG_CLEANCACHE=y
+CONFIG_FRONTSWAP=y
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_Z3FOLD=y
