defconfig: `CONFIG_ZRAM=m`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/sun7i_defconfig
+++ b/defconfig/sun7i_defconfig
@@ -337,7 +337,7 @@ CONFIG_MTD_SPI_NOR=m
 CONFIG_MTD_UBI=m
 CONFIG_OF_OVERLAY=y
 CONFIG_BLK_DEV_PCIESSD_MTIP32XX=m
-CONFIG_ZRAM=y
+CONFIG_ZRAM=m
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
 CONFIG_BLK_DEV_LOOP=y
