--- a/defconfig/sun8i_defconfig
+++ b/defconfig/sun8i_defconfig
@@ -353,7 +353,7 @@ CONFIG_GNSS=y
 CONFIG_GNSS_SIRF_SERIAL=m
 CONFIG_GNSS_UBX_SERIAL=m
 CONFIG_OF_OVERLAY=y
-CONFIG_ZRAM=y
+CONFIG_ZRAM=m
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_MEMORY_TRACKING=y
 CONFIG_BLK_DEV_LOOP=y
