defconfig: `sun50i_defconfig`
CONFIG_ARM_SCMI_PROTOCOL=m
CONFIG_ARM_SCMI_POWER_CONTROL=m
CONFIG_ARM_SCPI_PROTOCOL=y
CONFIG_FIRMWARE_MEMMAP=y
CONFIG_ARM_FFA_TRANSPORT=m
CONFIG_TEE=y
CONFIG_OPTEE=m

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -284,7 +284,12 @@ CONFIG_UEVENT_HELPER=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_PREVENT_FIRMWARE_BUILD is not set
+CONFIG_ARM_SCMI_PROTOCOL=m
+CONFIG_ARM_SCMI_POWER_CONTROL=m
+CONFIG_ARM_SCPI_PROTOCOL=y
+CONFIG_FIRMWARE_MEMMAP=y
 CONFIG_SYSFB_SIMPLEFB=y
+CONFIG_ARM_FFA_TRANSPORT=m
 CONFIG_EFI_BOOTLOADER_CONTROL=y
 CONFIG_RESET_ATTACK_MITIGATION=y
 CONFIG_GNSS=y
@@ -1102,6 +1107,8 @@ CONFIG_ARM_CCI_PMU=y
 # CONFIG_ARM_CCI400_PMU is not set
 # CONFIG_ARM_CCI5xx_PMU is not set
 CONFIG_NVMEM_SUNXI_SID=y
+CONFIG_TEE=y
+CONFIG_OPTEE=m
 CONFIG_MUX_GPIO=m
 CONFIG_MUX_MMIO=m
 CONFIG_VALIDATE_FS_PARSER=y
