--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -633,6 +633,7 @@ CONFIG_SENSORS_SMSC47B397=m
 CONFIG_SENSORS_SCH5627=m
 CONFIG_SENSORS_SCH5636=m
 CONFIG_SENSORS_TC74=m
+CONFIG_THERMAL=y
 CONFIG_THERMAL_NETLINK=y
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_GOV_FAIR_SHARE=y
