defconfig: `sun50i_defconfig`
AC200 support

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -420,6 +420,7 @@ CONFIG_STMMAC_PCI=m
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_LED_TRIGGER_PHY=y
+CONFIG_AC200_PHY=y
 CONFIG_REALTEK_PHY=y
 CONFIG_SMSC_PHY=y
 CONFIG_MDIO_SUN4I=y
@@ -650,9 +651,11 @@ CONFIG_SOFT_WATCHDOG=m
 CONFIG_SUNXI_WATCHDOG=y
 CONFIG_SSB=y
 CONFIG_BCMA=y
+CONFIG_MFD_ACT8945A=m
 CONFIG_MFD_SUN4I_GPADC=y
 CONFIG_MFD_AS3711=y
 CONFIG_MFD_AS3722=m
+CONFIG_MFD_AC200=y
 CONFIG_MFD_AXP20X_I2C=y
 CONFIG_MFD_AXP20X_RSB=y
 CONFIG_MFD_PCF50633=m
@@ -837,6 +840,7 @@ CONFIG_SND_SUN4I_SPDIF=y
 CONFIG_SND_SUN50I_DMIC=y
 CONFIG_SND_SUN9I_HDMI_AUDIO=y
 CONFIG_SND_SOC_XTFPGA_I2S=m
+CONFIG_SND_SOC_AC200_CODEC=m
 CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ALC5623=m
 CONFIG_SND_SOC_AW8738=m
@@ -1104,6 +1108,7 @@ CONFIG_PHY_CAN_TRANSCEIVER=m
 CONFIG_PHY_SUN4I_USB=y
 CONFIG_PHY_SUN9I_USB=y
 CONFIG_PHY_SUN50I_USB3=y
+CONFIG_AC200_PHY_CTL=m
 CONFIG_ARM_CCI_PMU=y
 # CONFIG_ARM_CCI400_PMU is not set
 # CONFIG_ARM_CCI5xx_PMU is not set
