board: `orangepi3lts`
Board now boots consistently and wifi now works. Unfortunately,
still having reboot issues.

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/sun50iw6_defconfig
+++ b/defconfig/sun50iw6_defconfig
@@ -76,6 +76,7 @@ CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
+CONFIG_MODULE_COMPRESS_XZ=y
 CONFIG_BLK_DEV_ZONED=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_WBT=y
@@ -1141,7 +1142,13 @@ CONFIG_W1_SLAVE_DS250X=m
 CONFIG_W1_SLAVE_DS28E04=m
 CONFIG_W1_SLAVE_DS28E17=m
 CONFIG_POWER_RESET_ATC260X=m
+CONFIG_POWER_RESET_GPIO=y
+CONFIG_POWER_RESET_GPIO_RESTART=y
+CONFIG_POWER_RESET_REGULATOR=y
+CONFIG_POWER_RESET_RESTART=y
 CONFIG_POWER_RESET_SYSCON=y
+CONFIG_SYSCON_REBOOT_MODE=m
+CONFIG_NVMEM_REBOOT_MODE=m
 CONFIG_IP5XXX_POWER=m
 CONFIG_CHARGER_ADP5061=m
 CONFIG_BATTERY_CW2015=m
@@ -1393,6 +1400,8 @@ CONFIG_REGULATOR_BD718XX=m
 CONFIG_REGULATOR_BD9571MWV=m
 CONFIG_REGULATOR_BD957XMUF=m
 CONFIG_REGULATOR_DA9121=m
+CONFIG_REGULATOR_FAN53555=m
+CONFIG_REGULATOR_FAN53880=m
 CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_MAX77650=m
 CONFIG_REGULATOR_MAX8893=m
@@ -1403,6 +1412,7 @@ CONFIG_REGULATOR_MP886X=m
 CONFIG_REGULATOR_MPQ7920=m
 CONFIG_REGULATOR_MT6315=m
 CONFIG_REGULATOR_PF8X00=m
+CONFIG_REGULATOR_PWM=m
 CONFIG_REGULATOR_QCOM_SPMI=y
 CONFIG_REGULATOR_RT4831=m
 CONFIG_REGULATOR_RT6160=m
@@ -1412,6 +1422,7 @@ CONFIG_REGULATOR_RTQ6752=m
 CONFIG_REGULATOR_S2MPS11=y
 CONFIG_REGULATOR_SY8106A=m
 CONFIG_REGULATOR_SY8824X=m
+CONFIG_REGULATOR_VCTRL=m
 CONFIG_RC_CORE=m
 CONFIG_LIRC=y
 CONFIG_RC_DECODERS=y
