defconfig: `sun50iw6_defconfig`
orangepi3lts: enable proper watchdog(s) to allow reboot.

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/sun50iw6_defconfig
+++ b/defconfig/sun50iw6_defconfig
@@ -1360,12 +1360,12 @@ CONFIG_THERMAL_MMIO=m
 CONFIG_SUN8I_THERMAL=y
 CONFIG_GENERIC_ADC_THERMAL=m
 CONFIG_WATCHDOG=y
+# CONFIG_WATCHDOG_HANDLE_BOOT_ENABLED is not set
+CONFIG_WATCHDOG_SYSFS=y
+CONFIG_WATCHDOG_HRTIMER_PRETIMEOUT=y
 CONFIG_SOFT_WATCHDOG=m
-CONFIG_BD957XMUF_WATCHDOG=m
 CONFIG_GPIO_WATCHDOG=m
-CONFIG_RAVE_SP_WATCHDOG=m
-CONFIG_ARM_SP805_WATCHDOG=m
-CONFIG_ARM_SBSA_WATCHDOG=m
+CONFIG_DW_WATCHDOG=m
 CONFIG_SUNXI_WATCHDOG=y
 CONFIG_MFD_SUN4I_GPADC=y
 CONFIG_MFD_BD9571MWV=m
