defconfig: `sun50iw6_defconfig`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/sun50iw6_defconfig
+++ b/defconfig/sun50iw6_defconfig
@@ -36,20 +36,11 @@ CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_RELAY=y
-CONFIG_BLK_DEV_INITRD=y
+CONFIG_BOOT_CONFIG=y
 CONFIG_EXPERT=y
 CONFIG_PERF_EVENTS=y
 CONFIG_ARCH_SUNXI=y
-# CONFIG_ARM64_ERRATUM_832075 is not set
-# CONFIG_CAVIUM_ERRATUM_22375 is not set
-# CONFIG_CAVIUM_ERRATUM_23154 is not set
-# CONFIG_CAVIUM_ERRATUM_27456 is not set
-# CONFIG_CAVIUM_ERRATUM_30115 is not set
-# CONFIG_QCOM_FALKOR_ERRATUM_1003 is not set
-# CONFIG_QCOM_FALKOR_ERRATUM_1009 is not set
-# CONFIG_QCOM_QDF2400_ERRATUM_0065 is not set
 CONFIG_ARM64_VA_BITS_48=y
-CONFIG_SCHED_MC=y
 CONFIG_SCHED_CLUSTER=y
 CONFIG_NR_CPUS=8
 CONFIG_NUMA=y
@@ -72,7 +63,10 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=m
 CONFIG_ARM_ALLWINNER_SUN50I_CPUFREQ_NVMEM=y
 CONFIG_ARM_SCPI_CPUFREQ=m
+CONFIG_VIRTUALIZATION=y
+CONFIG_KVM=y
 CONFIG_JUMP_LABEL=y
+CONFIG_GCC_PLUGIN_LATENT_ENTROPY=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
@@ -89,12 +83,13 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_BINFMT_MISC=m
+CONFIG_CLEANCACHE=y
+CONFIG_FRONTSWAP=y
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
-CONFIG_ZSWAP_COMPRESSOR_DEFAULT_ZSTD=y
-CONFIG_ZSWAP_ZPOOL_DEFAULT_Z3FOLD=y
-CONFIG_ZBUD=y
+CONFIG_Z3FOLD=y
 CONFIG_ZSMALLOC=y
+CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_KSM=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
@@ -907,7 +902,7 @@ CONFIG_RTL8187=m
 CONFIG_RTL8192CU=m
 # CONFIG_RTLWIFI_DEBUG is not set
 CONFIG_RTL8XXXU=m
-CONFIG_RTL8XXXU_UNTESTED=y
+# CONFIG_RTL8XXXU_UNTESTED= is not set
 # CONFIG_WLAN_VENDOR_RSI is not set
 CONFIG_WFX=m
 # CONFIG_WLAN_VENDOR_ST is not set
@@ -1147,7 +1142,8 @@ CONFIG_POWER_RESET_GPIO_RESTART=y
 CONFIG_POWER_RESET_REGULATOR=y
 CONFIG_POWER_RESET_RESTART=y
 CONFIG_POWER_RESET_SYSCON=y
-CONFIG_SYSCON_REBOOT_MODE=m
+CONFIG_POWER_RESET_SYSCON_POWEROFF=y
+CONFIG_SYSCON_REBOOT_MODE=y
 CONFIG_NVMEM_REBOOT_MODE=m
 CONFIG_IP5XXX_POWER=m
 CONFIG_CHARGER_ADP5061=m
@@ -1363,13 +1359,14 @@ CONFIG_WATCHDOG=y
 # CONFIG_WATCHDOG_HANDLE_BOOT_ENABLED is not set
 CONFIG_WATCHDOG_SYSFS=y
 CONFIG_WATCHDOG_HRTIMER_PRETIMEOUT=y
-CONFIG_SOFT_WATCHDOG=m
-CONFIG_GPIO_WATCHDOG=m
-CONFIG_DW_WATCHDOG=m
+CONFIG_SOFT_WATCHDOG=y
+CONFIG_GPIO_WATCHDOG=y
+CONFIG_GPIO_WATCHDOG_ARCH_INITCALL=y
+CONFIG_DW_WATCHDOG=y
 CONFIG_SUNXI_WATCHDOG=y
 CONFIG_MFD_SUN4I_GPADC=y
 CONFIG_MFD_BD9571MWV=m
-CONFIG_MFD_AC200=m
+CONFIG_MFD_AC200=y
 CONFIG_MFD_AXP20X_I2C=y
 CONFIG_MFD_AXP20X_RSB=y
 CONFIG_MFD_MADERA=m
@@ -1390,6 +1387,7 @@ CONFIG_RAVE_SP_CORE=m
 CONFIG_MFD_RSMU_I2C=m
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
+CONFIG_REGULATOR_USERSPACE_CONSUMER=y
 CONFIG_REGULATOR_88PG86X=m
 CONFIG_REGULATOR_ARM_SCMI=m
 CONFIG_REGULATOR_ATC260X=m
@@ -1445,6 +1443,10 @@ CONFIG_IR_PWM_TX=m
 CONFIG_IR_SPI=m
 CONFIG_IR_SUNXI=m
 CONFIG_RC_XBOX_DVD=m
+CONFIG_MEDIA_CEC_SUPPORT=y
+CONFIG_CEC_CH7322=m
+CONFIG_USB_PULSE8_CEC=m
+CONFIG_USB_RAINSHADOW_CEC=m
 CONFIG_MEDIA_SUPPORT=m
 CONFIG_MEDIA_SUPPORT_FILTER=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
@@ -2765,7 +2767,6 @@ CONFIG_CRYPTO_RMD160=m
 CONFIG_CRYPTO_VMAC=m
 CONFIG_CRYPTO_WP512=m
 CONFIG_CRYPTO_XCBC=m
-CONFIG_CRYPTO_LZO=y
 CONFIG_CRYPTO_842=m
 CONFIG_CRYPTO_LZ4=m
 CONFIG_CRYPTO_LZ4HC=m
