--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -531,6 +531,7 @@ CONFIG_RTL8XXXU_UNTESTED=y
 # CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
+CONFIG_WCN_BSP_DRIVER_BUILDIN=y
 # CONFIG_WLAN_UWE5621 is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
