--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -1164,6 +1164,7 @@ CONFIG_AC200_PHY_CTL=y
 CONFIG_ARM_CCI_PMU=y
 # CONFIG_ARM_CCI400_PMU is not set
 # CONFIG_ARM_CCI5xx_PMU is not set
+CONFIG_LIBNVDIMM=m
 CONFIG_NVMEM_RMEM=m
 CONFIG_NVMEM_SUNXI_SID=y
 CONFIG_NVMEM_U_BOOT_ENV=m
