defconfig: meson64: `additions`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -644,10 +644,13 @@ CONFIG_RC_ATI_REMOTE=m
 CONFIG_RC_LOOPBACK=m
 CONFIG_RC_XBOX_DVD=m
 CONFIG_MEDIA_CEC_RC=y
+CONFIG_MEDIA_CEC_SUPPORT=y
 CONFIG_CEC_MESON_AO=y
 CONFIG_CEC_MESON_G12A_AO=y
 CONFIG_CEC_GPIO=m
 CONFIG_MEDIA_SUPPORT=y
+CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_MEDIA_ANALOG_TV_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER_DVB=y
 CONFIG_DVB_MAX_ADAPTERS=8
 # CONFIG_DVB_DYNAMIC_MINORS is not set
@@ -1062,7 +1065,7 @@ CONFIG_R8712U=m
 CONFIG_R8188EU=m
 CONFIG_RTS5208=m
 CONFIG_STAGING_MEDIA=y
-CONFIG_VIDEO_MESON_VDEC=y
+CONFIG_VIDEO_MESON_VDEC=m
 CONFIG_STAGING_BOARD=y
 CONFIG_FB_TFT=m
 CONFIG_FB_TFT_AGM1264K_FL=m
@@ -1131,6 +1134,7 @@ CONFIG_PWM_MESON=y
 CONFIG_RESET_TI_SYSCON=m
 CONFIG_PHY_CAN_TRANSCEIVER=m
 CONFIG_ARM_CCI_PMU=m
+CONFIG_MESON_DDR_PMU=m
 CONFIG_MESON_EFUSE=y
 CONFIG_MESON_MX_EFUSE=y
 CONFIG_NVMEM_MESON_EFUSE=y
