--- a/defconfig/odroid_defconfig
+++ b/defconfig/odroid_defconfig
@@ -843,6 +843,7 @@ CONFIG_MEDIA_CEC_RC=y
 CONFIG_CEC_MESON_AO=y
 CONFIG_CEC_MESON_G12A_AO=y
 CONFIG_CEC_GPIO=m
+CONFIG_MEDIA_CEC_SUPPORT=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER_DVB=y
 CONFIG_DVB_MAX_ADAPTERS=8
@@ -1194,7 +1195,7 @@ CONFIG_RTL8723BS=m
 CONFIG_R8712U=m
 CONFIG_R8188EU=m
 CONFIG_STAGING_MEDIA=y
-CONFIG_VIDEO_MESON_VDEC=y
+CONFIG_VIDEO_MESON_VDEC=m
 CONFIG_STAGING_BOARD=y
 # CONFIG_SURFACE_PLATFORMS is not set
 CONFIG_COMMON_CLK_SCPI=y
@@ -1233,6 +1234,7 @@ CONFIG_PWM_GPIO=y
 CONFIG_PWM_MESON=y
 CONFIG_RESET_TI_SYSCON=m
 CONFIG_ARM_CCI_PMU=m
+CONFIG_MESON_DDR_PMU=m
 CONFIG_NVMEM_SPMI_SDAM=m
 CONFIG_MESON_EFUSE=y
 CONFIG_MESON_MX_EFUSE=y
