patches: overlays: meson-g12a-radxa-zero: `fixup`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/patches/overlays/arm64/meson-g12a-radxa-zero-spi-spidev.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-spi-spidev.dts
@@ -6,7 +6,7 @@
 
 	fragment@0 {
 		target = <&spicc0>;
-		__overlays__ {
+		__overlay__ {
 			pinctrl-0 = <&spicc0_x_pins &spicc0_ss0_x_pins>;
 			pinctrl-names = "default";
 			#address-cells = <1>;
@@ -22,7 +22,7 @@
 
 	fragment@1 {
 		target = <&spicc1>;
-		__overlays__ {
+		__overlay__ {
 			pinctrl-0 = <&spicc1_pins &spicc1_ss0_pins>;
 			pinctrl-names = "default";
 			#address-cells = <1>;
