--- a/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ao-a-on-gpioao-0-gpioao-1.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ao-a-on-gpioao-0-gpioao-1.dts
@@ -6,7 +6,7 @@
 
 	fragment@0 {
 		target = <&uart_AO>;
-		__overlays__ {
+		__overlay__ {
 			status = "okay";
 			pinctrl-0 = <&uart_ao_a_pins>;
 			pinctrl-names = "default";
