--- a/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ee-c.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ee-c.dts
@@ -6,7 +6,7 @@
 
 	fragment@0 {
 		target = <&uart_C>;
-		__overlays__ {
+		__overlay__ {
 			status = "okay";
 			pinctrl-0 = <&uart_c_pins &uart_c_cts_rts_pins>;
 			pinctrl-names = "default";
