--- a/patches/overlays/arm64/meson-g12a-radxa-zero-i2c-ao-m0-gpioao-2-gpioao-3.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-i2c-ao-m0-gpioao-2-gpioao-3.dts
@@ -6,7 +6,7 @@
 
 	fragment@0 {
 		target = <&i2c_AO>;
-		__overlays__ {
+		__overlay__ {
 			status = "okay";
 			pinctrl-0 = <&i2c_ao_sck_pins &i2c_ao_sda_pins>;
 			pinctrl-names = "default";
