--- a/patches/overlays/arm64/meson-g12a-radxa-zero-i2c-ee-m1-gpiox-10-gpiox-11.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-i2c-ee-m1-gpiox-10-gpiox-11.dts
@@ -6,7 +6,7 @@
 
 	fragment@0 {
 		target = <&i2c1>;
-		__overlays__ {
+		__overlay__ {
 			status = "okay";
 			pinctrl-0 = <&i2c1_sda_x_pins &i2c1_sck_x_pins>;
 			pinctrl-names = "default";
