--- a/patches/overlays/arm64/meson-g12a-radxa-zero-i2c-ee-m3-gpioa-14-gpioa-15.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-i2c-ee-m3-gpioa-14-gpioa-15.dts
@@ -6,7 +6,7 @@
 
 	fragment@0 {
 		target = <&i2c3>;
-		__overlays__ {
+		__overlay__ {
 			status = "okay";
 			pinctrl-0 = <&i2c3_sck_a_pins &i2c3_sda_a_pins>;
 			pinctrl-names = "default";
