--- a/patches/overlays/arm64/meson-g12a-radxa-zero-pwm-c-on-gpiox-8.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-pwm-c-on-gpiox-8.dts
@@ -6,7 +6,7 @@
 
 	fragment@0 {
 		target = <&pwm_cd>;
-		__overlays__ {
+		__overlay__ {
 			status = "okay";
 			pinctrl-0 = <&pwm_c_x8_pins>;
 			pinctrl-names = "default";
