--- a/patches/overlays/arm64/meson-g12a-radxa-zero-pwmao-a-on-gpioao-11.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-pwmao-a-on-gpioao-11.dts
@@ -6,7 +6,7 @@
 
 	fragment@0 {
 		target = <&pwm_AO_ab>;
-		__overlays__ {
+		__overlay__ {
 			status = "okay";
 			pinctrl-0 = <&pwm_ao_a_pins>;
 			pinctrl-names = "default";
