--- a/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ao-b-on-gpioao-8-gpioao-9.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ao-b-on-gpioao-8-gpioao-9.dts
@@ -6,7 +6,7 @@
 
 	fragment@0 {
 		target = <&uart_AO_B>;
-		__overlays__ {
+		__overlay__ {
 			status = "okay";
 			pinctrl-0 = <&uart_ao_b_tx_8_rx_9_pins>;
 			pinctrl-names = "default";
