patches: overlays: meson-g12a-radxa-zero: `uart_ao_b`
use correct pinctrl nodes

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ao-b-on-gpioao-2-gpioao-3.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ao-b-on-gpioao-2-gpioao-3.dts
@@ -8,7 +8,7 @@
 		target = <&uart_AO_B>;
 		__overlay__ {
 			status = "okay";
-			pinctrl-0 = <&uart_ao_b_tx_2_rx_3_pins>;
+			pinctrl-0 = <&uart_ao_b_2_3_pins>;
 			pinctrl-names = "default";
 		};
 	};
