--- a/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ao-b-on-gpioao-8-gpioao-9.dts
+++ b/patches/overlays/arm64/meson-g12a-radxa-zero-uart-ao-b-on-gpioao-8-gpioao-9.dts
@@ -8,7 +8,7 @@
 		target = <&uart_AO_B>;
 		__overlay__ {
 			status = "okay";
-			pinctrl-0 = <&uart_ao_b_tx_8_rx_9_pins>;
+			pinctrl-0 = <&uart_ao_b_8_9_pins>;
 			pinctrl-names = "default";
 		};
 	};
