lib: dialog: config: `USER_PKGS`
Add the variable to the profile.txt

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -47,6 +47,7 @@ NETWORKMANAGER="1"
 RTW88="1"
 RTL88XXAU="1"
 USERACCT="0"
+USER_PKGS="htop libsensors-dev"
 LOCALE="en_US.UTF-8"
 TIMEZONE="America/New_York"
 USER_NAMESERVER1="8.8.8.8"
@@ -135,7 +136,7 @@ echo USCRIPTS= >> tmp0
 echo USERACCT= >> tmp0
 echo 'EMMC="0"' >> tmp0
 echo 'ROOTPASSWD="0"' >> tmp0
-echo 'USER_PKGS="htop libsensors-dev"' >> tmp0
+echo USER_PKGS='"'${USER_PKGS}'"' >> tmp0
 echo CORES=\`nproc\` >> tmp0
 echo 'CFLAGS=""' >> tmp0
 echo 'KBUSER="marvin"' >> tmp0
