defconfig: `nanopi5_defconfig`
maintenance

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/nanopi5_defconfig
+++ b/defconfig/nanopi5_defconfig
@@ -1,5 +1,4 @@
 # CONFIG_LOCALVERSION_AUTO is not set
-# CONFIG_DEFAULT_HOSTNAME="localhost"
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_NO_HZ=y
@@ -32,11 +31,7 @@ CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
 CONFIG_USER_NS=y
 CONFIG_SCHED_AUTOGROUP=y
-CONFIG_BLK_DEV_INITRD=y
-# CONFIG_RD_BZIP2 is not set
-# CONFIG_RD_LZMA is not set
-# CONFIG_RD_XZ is not set
-# CONFIG_RD_LZO is not set
+CONFIG_BOOT_CONFIG=y
 CONFIG_EMBEDDED=y
 CONFIG_PROFILING=y
 CONFIG_ARCH_ROCKCHIP=y
