--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -202,7 +202,7 @@ echo "" >> custom.txt
 echo "# Petitboot (ODROID): true false" >> custom.txt
 echo 'ENABLE_PETITBOOT="false"' >> custom.txt
 echo "" >> custom.txt
-echo "# Default Image Size: 4096MB" >> custom.txt
+echo "# Image Size: 3072MB 3584MB 4096MB" >> custom.txt
 echo 'IMGSIZE="4096MB"' >> custom.txt
 echo "" >> custom.txt
 echo "# Shrink Image (EXT4 Only): true false" >> custom.txt
