defconfig: `meson64_defconfig`
CONFIG_BLK_DEV_DM=m
CONFIG_CEC_MESON_AO=m
CONFIG_CEC_MESON_G12A_AO=m

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -531,7 +531,7 @@ CONFIG_SATA_AHCI_PLATFORM=m
 CONFIG_AHCI_DWC=m
 CONFIG_MD=y
 CONFIG_BCACHE=y
-CONFIG_BLK_DEV_DM=y
+CONFIG_BLK_DEV_DM=m
 CONFIG_DM_CRYPT=m
 CONFIG_DM_INIT=y
 CONFIG_DM_UEVENT=y
@@ -894,8 +894,8 @@ CONFIG_RC_LOOPBACK=m
 CONFIG_RC_XBOX_DVD=m
 CONFIG_MEDIA_CEC_RC=y
 CONFIG_MEDIA_CEC_SUPPORT=y
-CONFIG_CEC_MESON_AO=y
-CONFIG_CEC_MESON_G12A_AO=y
+CONFIG_CEC_MESON_AO=m
+CONFIG_CEC_MESON_G12A_AO=m
 CONFIG_CEC_GPIO=m
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
