defconfig: `rockchip64-rk356x_defconfig`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/rockchip64-rk356x_defconfig
+++ b/defconfig/rockchip64-rk356x_defconfig
@@ -29,6 +29,7 @@ CONFIG_USER_NS=y
 CONFIG_BOOT_CONFIG=y
 CONFIG_EXPERT=y
 CONFIG_PROFILING=y
+CONFIG_KEXEC=y
 CONFIG_KEXEC_FILE=y
 CONFIG_CRASH_DUMP=y
 CONFIG_ARCH_ROCKCHIP=y
@@ -98,6 +99,8 @@ CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_BSD_DISKLABEL=y
 CONFIG_CMDLINE_PARTITION=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_BINFMT_MISC=m
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
@@ -553,6 +556,7 @@ CONFIG_AHCI_DWC=m
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=m
 CONFIG_DM_CRYPT=m
+CONFIG_DM_INIT=y
 CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=m
