patches: samsung: `spi-dev`
maintenance

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/patches/overlays/arm/exynos5422-odroidxu4-spidev0.dts
+++ b/patches/overlays/arm/exynos5422-odroidxu4-spidev0.dts
@@ -17,7 +17,7 @@
 			spidev: spidev@0 {
 				status = "okay";
 				reg = <0>;
-				compatible = "odroid,spidev";
+				compatible = "odroid,spi-dev";
 				spi-max-frequency = <1000000>;
 
 				controller-data {
