--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -37,10 +37,11 @@ LTS1=$(curl -Ls $JSON_FILE | grep -w "version" | sed -n $LTS1_L | sed -r 's/"ver
 LTS2=$(curl -Ls $JSON_FILE | grep -w "version" | sed -n $LTS2_L | sed -r 's/"version"://g' | sed -r '1s/\s+//g' | sed 's/,//g' | sed 's/\"//g')
 STABLE=$(curl -s $JSON_FILE | jq '.latest_stable.version' -r)
 GCC=`ls -ls /usr/bin/gcc | sed 's/.*\(..\)/\1/' | sed 's/ //g'`
+MYNAME=`echo $USER | sed -e "s/\b\(.\)/\u\1/g"`
 
-NAME=""
-USERNAME=""
-PASSWORD=""
+NAME="$MYNAME"
+USERNAME="$USER"
+PASSWORD="board"
 VERSION="$LTS2"
 CCACHE="0"
 NETWORKMANAGER="1"
@@ -139,8 +140,8 @@ echo 'ROOTPASSWD="0"' >> tmp0
 echo USER_PKGS='"'${USER_PKGS}'"' >> tmp0
 echo CORES=\`nproc\` >> tmp0
 echo 'CFLAGS=""' >> tmp0
-echo 'KBUSER="marvin"' >> tmp0
-echo 'KBHOST="martian"' >> tmp0
+echo 'KBUSER="playboy"' >> tmp0
+echo 'KBHOST="penguin"' >> tmp0
 echo "RTW88=${RTW88}" >> tmp0
 echo "RTL88XXAU=${RTL88XXAU}" >> tmp0
 echo "set_locales(){" >> tmp0
