defconfig: meson64_defconfig: `6.7`
Temp disable CONFIG_VIDEO_SOLO6X10=m as it fail to build

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -976,7 +976,7 @@ CONFIG_USB_AIRSPY=m
 CONFIG_USB_HACKRF=m
 CONFIG_USB_MSI2500=m
 CONFIG_MEDIA_PCI_SUPPORT=y
-CONFIG_VIDEO_SOLO6X10=m
+# CONFIG_VIDEO_SOLO6X10= fails to build on 6.7
 CONFIG_VIDEO_TW5864=m
 CONFIG_VIDEO_TW68=m
 CONFIG_VIDEO_TW686X=m
