patches: overlays: `sunxi-h5-mbus-devfreq-driver`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/patches/overlays/arm64/Makefile
+++ b/patches/overlays/arm64/Makefile
@@ -45,7 +45,8 @@ dtbo-$(CONFIG_ARCH_SUNXI) += \
 	sunxi-h3-h5-overclock.dtbo \
 	sunxi-h5-i2c0.dtbo \
 	sunxi-h5-i2c1.dtbo \
-	sunxi-h5-i2c2.dtbo
+	sunxi-h5-i2c2.dtbo \
+	sunxi-h5-mbus-devfreq-driver.dtbo
 
 targets += dtbs dtbs_install
 targets += $(dtbo-y)
