lib: dialog: config: `add spacing to userdata.txt`
Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -179,10 +179,11 @@ fi
 # clear screen
 clear -x
 
-# userdata-txt
+# finish formatting the user data file
 if [[ -f "userdata.txt" ]]; then
 	sed -i 's/=0/="0"/g' userdata.txt
 	sed -i 's/=1/="1"/g' userdata.txt
+	sed -i '5G;9G;16G;28G;31G;34G;37G;43G' userdata.txt
 	echo -e "userdata.txt file created."
 	exit 0
 fi
